Added IDs to USERAGENT

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,7 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = DEFAULT AGENT
+USERAGENT = IR F20 43603501,24801034,18678158,51476181
+
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
